implement project submission grade adjustment